src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>EB_Rating__c</fullName>
        <description>EB Rating</description>
        <label>zEB Rating</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>86</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Bounce_in_Hubspot__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for Mike Smith prior to the Hubspot integration to SF.  Manually populated by dataloader so he knew which contacts not to pull for email campaigns.  Can probably be deletd</description>
        <inlineHelpText>Created for Mike Smith prior to the Hubspot integration to SF.  Manually populated by dataloader so he knew which contacts not to pull for email campaigns.  Can probably be deletd</inlineHelpText>
        <label>zEmail Bounce in Hubspot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_match__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To be used with Duplicate field.</description>
        <inlineHelpText>Used for deduping.</inlineHelpText>
        <label>BA Email match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engaged__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is our Sales team engaged with this lead?</inlineHelpText>
        <label>zEngaged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Close_Date__c</fullName>
        <description>The expected close date.</description>
        <inlineHelpText>Please enter the expected close date.</inlineHelpText>
        <label>zExpected Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Plan_Value__c</fullName>
        <description>The expected value of the plan selected on this lead.</description>
        <inlineHelpText>The expected value of the plan selected on this lead.</inlineHelpText>
        <label>zExpected Plan Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Plan__c</fullName>
        <description>Expected Plan. Default to Bronze.</description>
        <inlineHelpText>Expected Plan. Default to Bronze.</inlineHelpText>
        <label>zExpected Plan</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expected_Stores__c</fullName>
        <description>For partner request web form mapping</description>
        <inlineHelpText>For partner request web form mapping</inlineHelpText>
        <label>zPAR Expected Stores</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <description>Experience. Populated from MBA</description>
        <inlineHelpText>Experience. Populated from MBA</inlineHelpText>
        <label>MBA Experience</label>
        <picklist>
            <picklistValues>
                <fullName>New to eCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experienced with eCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switching from a Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A Web Designer/Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I&apos;m setting up a store for a client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Facebook__c</fullName>
        <label>Facebook</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Followed_Up_to_Twitter_Webinar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>zFollowed Up to Twitter Webinar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName &amp; &quot; &quot; &amp; LastName</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functionality_Detail__c</fullName>
        <label>Unqualified Reason Detail</label>
        <picklist>
            <controllingField>Closed_Lost_Reason__c</controllingField>
            <picklistValues>
                <fullName>1,3,4 Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 GoDaddy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Magento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Shopify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Volusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Accidental trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 No Pitch-Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 No products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 No time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 100% Uptime Servers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Affiliate Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Ease of Use/Simplification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Difficulty with Product Options</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Importing review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Integration with Third Party tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Inventory/Billing Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Lack of Themes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Multi-Language Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Multiple Store Back-End</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Provisioning Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Unsupported Cart-Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Minor/Child Sign Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Orion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Pre-Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 School Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Spam Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Test Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Sandbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-employment Test</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Google_Analytics_Ad_Content__c</fullName>
        <label>zGoogle Analytics Ad Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google__c</fullName>
        <label>Google+</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Activity__c</fullName>
        <formula>IF( ISBLANK( LastActivityDate ) = FALSE, 1, NULL)</formula>
        <label>Has Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_Products__c</fullName>
        <description>Does the prospect have products to sell?</description>
        <inlineHelpText>Does the prospect have products to sell?</inlineHelpText>
        <label>Has Products?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hours_to_Convert__c</fullName>
        <formula>(Converted_Date__c -  Created_Date_Time__c )*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours to Convert</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_us__c</fullName>
        <description>How did the prospect hear about us?</description>
        <inlineHelpText>How did the prospect hear about us?</inlineHelpText>
        <label>How did you hear about us?</label>
        <picklist>
            <picklistValues>
                <fullName>Advertising (Internet Retailer, eCommerce Times)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google/Search Engine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online publication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Review</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hubspot_Score_Difference__c</fullName>
        <formula>Hubspot_Score__c  -  Initial_Hubspot_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Difference between current Hubspot score and initialy Hubspot score.</inlineHelpText>
        <label>zMKT Hubspot Score Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hubspot_Score__c</fullName>
        <label>zMKT Hubspot Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IP_State__c</fullName>
        <label>IP State</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Hubspot_Score__c</fullName>
        <label>zMKT Initial Hubspot Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interspire_Edition__c</fullName>
        <description>Interspire Shopping Cart edition</description>
        <inlineHelpText>Interspire Shopping Cart edition</inlineHelpText>
        <label>zInterspire Edition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is there a duplicate?</inlineHelpText>
        <label>BA Is Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <description>What is this person&apos;s job function?</description>
        <inlineHelpText>What is this person&apos;s job function?</inlineHelpText>
        <label>zJob Function</label>
        <picklist>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LDR_Rating__c</fullName>
        <description>LDR Rating</description>
        <inlineHelpText>LDR Rating</inlineHelpText>
        <label>LDR Rating</label>
        <picklist>
            <picklistValues>
                <fullName>00 - New Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0 - LDR In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - SQL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - AE Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - AE Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - DQ/NI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Follow Up Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - End Process/Nurture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>86 - Bad Contact Info</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Landing_Page__c</fullName>
        <inlineHelpText>URL the client clicked on when signing up for the first trial</inlineHelpText>
        <label>MKT Landing Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Case_Survey_Date__c</fullName>
        <description>Scoped in the service cloud deployment project in order to use in survey alert filters but isn&apos;t used.  Can&apos;t delete because of this apex class https://na13.salesforce.com/01pa0000001OLgP?retURL=%2Fp%2Fsetup%2Flayout%2FLayoutFieldList%3Ftype%3DLead%26setupid%3DLeadFields
Have a developer check implications before removing</description>
        <inlineHelpText>Populated via trigger with most recent case survey date</inlineHelpText>
        <label>zLast Case Survey Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Age__c</fullName>
        <formula>Today() - DATEVALUE( CreatedDate )</formula>
        <label>Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Assignment_Method__c</fullName>
        <description>When this lead was created, how was it assigned to an owner?  Populated by defaults and workflows but could be built more robustly</description>
        <label>zLead Assignment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Assigned to Creator</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Round Robin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Same as existing lead (email)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Same as existing lead (phone)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Same as existing contact (email)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Same as existing account (phone)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migrated from another user</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acquisition team lead (email)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acquisition team lead (phone)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Imported</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Match</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chat</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Count__c</fullName>
        <description>For reporting purposes only; not on layouts</description>
        <formula>1</formula>
        <inlineHelpText>For reporting purposes only; not on layouts</inlineHelpText>
        <label>REPORT Lead Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Creation_Date__c</fullName>
        <defaultValue>TODAY ()</defaultValue>
        <description>Used by SOps to track converted leads at the account level</description>
        <label>zLead Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <label>Lead Source Detail</label>
        <picklist>
            <controllingField>LeadSource</controllingField>
            <picklistValues>
                <fullName>Adam Seabrooke</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admarketplace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AdRoll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amazon Seller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Braintree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capterra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commission Junction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datanyze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demandbase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecom Bytes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endicia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G2crowd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Shopping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Happy Hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impact Radius</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instagram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet Retailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intuit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LinkedIn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luncheon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meet-up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Unique_ID__c</fullName>
        <description>For reporting purposes: modifies the Salesforce ID to be a non case sensitive version so there are no duplicates in Excel</description>
        <formula>Id
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)</formula>
        <label>Lead Unique ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedIn_URL__c</fullName>
        <label>LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MBAAccountID__c</fullName>
        <externalId>true</externalId>
        <label>MBA Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBAClientID__c</fullName>
        <label>MBA Client ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBAHostingID__c</fullName>
        <description>Old field that can&apos;t be deleted because it&apos;s called out in 2 apex classes</description>
        <label>zOLD MBAHostingID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBA_Partner_ID__c</fullName>
        <label>MBA Partner ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBA_Phone_1__c</fullName>
        <label>MBA Phone 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MBA_Phone_2__c</fullName>
        <label>MBA Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MBA_Phone_3__c</fullName>
        <label>MBA Phone 3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MBA_Referral_ID__c</fullName>
        <description>referral Id to be passed to the Opportunity per BAP-2988</description>
        <label>MBA Referral ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKT_UTM_Campaign__c</fullName>
        <description>Marketing UTM Campaign information populated from Hubspot</description>
        <inlineHelpText>Marketing UTM Campaign information populated from Hubspot</inlineHelpText>
        <label>MKT UTM Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKT_UTM_Medium__c</fullName>
        <description>Marketing UTM Medium, populated from Hubspot</description>
        <inlineHelpText>Marketing UTM Medium, populated from Hubspot</inlineHelpText>
        <label>MKT UTM Medium</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKT_UTM_Source__c</fullName>
        <description>Marketing UTM Source populated from Hubspot</description>
        <inlineHelpText>Marketing UTM Source populated from Hubspot</inlineHelpText>
        <label>MKT UTM Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if the client is interested but needs time.  This will be used to send marketing material to the client.</inlineHelpText>
        <label>zMarketing Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Promotion__c</fullName>
        <inlineHelpText>This field describes a promotion given to a prospect to encourage them to upgrade from a free trial to a paid store.</inlineHelpText>
        <label>zMKT Promotion</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Source__c</fullName>
        <description>Fed from Hubspot with form information</description>
        <inlineHelpText>Populated from Hubspot?</inlineHelpText>
        <label>MKT Marketing Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Status__c</fullName>
        <description>Where is the merchant currently selling?</description>
        <inlineHelpText>Where is the merchant currently selling?</inlineHelpText>
        <label>zMerchant Status</label>
        <picklist>
            <picklistValues>
                <fullName>Brick and mortar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brick and mortar and online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple stores online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Store</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Trial_URL__c</fullName>
        <description>for hubspot. move from WFR population to code at some point</description>
        <label>zMost Recent Trial URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Trial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>zMost Recent Trial</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <description>Next Step in lead development process</description>
        <inlineHelpText>Next Step in lead development process</inlineHelpText>
        <label>zNext Step</label>
        <picklist>
            <picklistValues>
                <fullName>Appointment Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow Up Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule Appointment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <description>Acquisition field</description>
        <label>zNext Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_Assign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag used to tell the assignment rules if they should fire. Mainly used in the MBA Integration so code can assign Partner Account as owner without lead being re-assigned via assignment rules</description>
        <label>No Assign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_English_Speaking__c</fullName>
        <defaultValue>false</defaultValue>
        <description>WFRs fire from this field</description>
        <label>Non English Speaking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Num_Day_of_Trial__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Populated by job</description>
        <label>zDay of Trial #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_EEs__c</fullName>
        <description>This is a field populated from Hubspot to SalesforceThis is a field populated from Hubspot to Salesforce. Can be updated by a Sales rep</description>
        <inlineHelpText>This is a field populated from Hubspot to Salesforce. Can be updated by a Sales rep</inlineHelpText>
        <label>Number of Employees</label>
        <picklist>
            <picklistValues>
                <fullName>0-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees__c</fullName>
        <description>For partner request web form mapping</description>
        <label>zPartner Number of Employees</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Products__c</fullName>
        <description>Hubspot AR-5170</description>
        <inlineHelpText>Populated from Hubspot form. Can be updated by a Sales rep.</inlineHelpText>
        <label>Number of Products</label>
        <picklist>
            <picklistValues>
                <fullName>0-1,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1,000-5,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5,000-25,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25,000 - 50,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50,000+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opened_Pricing_PDF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Populated by Hubspot if a trialer opens the new pricing PDF</description>
        <inlineHelpText>Populated by Hubspot if a trialer opens the new pricing PDF</inlineHelpText>
        <label>z MKT Opened Pricing PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Openend_Product_Tour_Recording__c</fullName>
        <defaultValue>false</defaultValue>
        <description>webinar/marketing action done by client</description>
        <inlineHelpText>Has this client viewed/clicked the &quot;Play&quot; button for the recorded Product Tour Webinar</inlineHelpText>
        <label>z MKT Openend Product Tour Recording</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Orion_Segment__c</fullName>
        <description>For Orion.</description>
        <label>zSBD Orion Segment</label>
        <length>225</length>
        <type>Text</type>
    </fields>
</CustomObject>